@@ -1,22 +1,20 @@
 package br.com.impacta.meucondominio.domain.enums;
 
 import br.com.impacta.meucondominio.domain.model.AreaComum;
-import lombok.AllArgsConstructor;
 import lombok.Getter;
-import lombok.NoArgsConstructor;
-import org.springframework.stereotype.Component;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public enum AreaComumEnum {
 
-    HALL_ANDAR(1, "Hall do andar "),
-    HALL_PREDIO(2, "Hall do prédio"),
-    GARAGEM(3, "Garagem"),
-    PISCINA(4, "Piscina"),
-    ACADEMIA(5, "Academia"),
-    QUADRA_POLIESPORTIVA(6, "Quadra poliesportiva");
+    HALL_ANDAR(0, "Hall do andar "),
+    HALL_PREDIO(1, "Hall do prédio"),
+    GARAGEM(2, "Garagem"),
+    PISCINA(3, "Piscina"),
+    ACADEMIA(4, "Academia"),
+    QUADRA_POLIESPORTIVA(5, "Quadra poliesportiva");
 
     @Getter
     private int id;
@@ -28,12 +26,15 @@ public enum AreaComumEnum {
         this.nome = nome;
     }
 
-    public static List<AreaComum> getAreaComum() {
-        return (List<AreaComum>) Arrays.stream(AreaComumEnum.values()).map(e -> {
+    public static AreaComum getAreaComum(int id){
+        return listarAreaComum().get(id);
+    }
+    public static List<AreaComum> listarAreaComum() {
+        return Arrays.stream(AreaComumEnum.values()).map(e -> {
             return AreaComum.builder()
                     .id(e.getId())
                     .nome(e.getNome())
                     .build();
-        }).toList();
+        }).collect(Collectors.toList());
     }
 }
